<resources>
    <string name="app_name">SprintZeal</string>
    <string name="floatname">SprintZeal\nDeal</string>
    <string name="keyhash">L1O+e7UCSfsbnXK9yMrm04SBfAk=</string>
    <string name="facebook_app_id">184463645786582</string>
    <string name="fb_login_protocol_scheme">fb184463645786582</string>
    <string name="podcast">videos,podcast,terms and concept,study Guides for\nExcel,Proctored Excel Online Training</string>
    <string name="at">copyright SprintZeal</string>
    <string name="information">Unlimited Access to\nEntrepreneurial and Career\nDevelopment Courses for Only\n $5  per Month</string>
    <string name="offertype">Join FREE for 10 Days\nThen only US$5/Month </string>
    <string name="login">Log In</string>
    <string name="memberlogin">Log In to SprintZeal</string>
    <string name="forgotpasword">Forgot Password?</string>
    <string name="forgotpaswordtext">Reset Password</string>
    <string name="forgotpaswordtextinfornation">RETRIEVE MY INFORMATION</string>
    <string name="note">Unlimited Streaming in SD at US $5 a month after free trial.By checking the checkbox below, you agree to our Terms of Use, Privacy Policy, and that you are over 18. You may cancel at any time in your free trial and will not be charged. Sprintzeal will automatically continue your membership at the end of your free trial and charge the membership fee (currently US$5) to your payment method on a monthly basis until you cancel.</string>
    <string name="lvcheader">PMP® EXAM PREP BOOT CAMP</string>
    <string name="lvcdescp">Description</string>
    <string name="lvcdescp3">10 Days Money back Guarantee: Full money back guarantee if not satisfied with the quality of the training.



PMP Facilitator Support: Write to us with your queries and get it answered by Our Course SME’s.



Practice Test Papers: Get 1000+ practice questions to prepare for your PMP® examination.



PMI-PMP® 35 contact hour certificate/ PDU Certificate: On completion, you will receive 35 Contact hours Certificate / PDU Certificate to apply for your PMI-PMP® examination globally.



Post Program Support: Get expert advice on PMP exam application and PMP audit procedure.</string>
    <string name="lvcdescp2">Self-Paced Online Training: Our versatile PMP® online training is designed to meet the requirement of self-learning candidate. The content is self-explanatory with quiz at end of each session. PMP® online training covers the complete PMBOK® Sixth Edition syllabus from PMI® – Project Management Institute.</string>
    <string name="lvcdescp1">PMP® (Project Management Professional) is the most popular and globally accepted certification on Project Management by the PMI®, USA (Project Management Institute). PMP® is one of the hottest trending certification an organization seeks in their Project Managers. PMP® demonstrates your capability on handling and leading Projects</string>
    <string name="lvcsub1"> (687 reviews)</string>
    <string name="lvcsub2">5307  Students Enrolled</string>
    <string name="lvccon1">PMP® Exam Prep Boot camp\nHigh Quality Online Self Learning Audio-Videos, complete PMP® Training using PMBOK® Guide - Sixth Edition Live Class to learn and preapre for your exam\nLearn anytime through our L.M.S Learning Management System login access.\nGet 35 Contact Hour Certificate after completing the training. PMI - REP ID - 4719\nTrusted by Millions across the Globe High quality E-Learning content with strategy to clear the PMP® Certification exam at first attempt.\nGet 1000+ Practice Test Questions to test your knowledge before scheduling the actual exam. Get Soft copy student study guide for your offline learning.\n10 days Money Back Guarantee, buy without worries. Ask for full refund if you are not satisfied.\nGet instant login credentials to access the content anywhere, anytime. Dedicated customer support available.\nDon’t Pay More..!! When we are ready to give you for lesser price. Talk to us, if you see someone else have better pricings than us.</string>
    <string name="step1">STEP 1 OF 3</string>
    <string name="signuptostart">Sign up to start your free 10 day trial</string>
    <string name="twomorestep">Just two more steps and you are done\nWe hate filling out forms too.</string>
    <string name="createaccount">Create your account..</string>
    <string name="con">Continue</string>
    <string name="step2">STEP 2 OF 3</string>
    <string name="step2plan">Unlimited Access to Entrepreneurial and Career Development Courses for Only $5 per Month. Register in app and enjoy your learning for unlimited training program. We wont charge you for first 10 days until the trial ends.</string>
    <string name="canceltext">(No Commitments Cancel Online at Any time)\n\n

If you decide the courses in “Sprintzeal APP” arent for you - no problem. You can easily cancel at any time.\n\n

Join FREE for 10 Days Then Only US$5/Month
</string>
    <string name="canceltext1">Life is Too Short To Waste Time and Money Learning Things You ll Never Use</string>
    <string name="canceltext2">Choosing a career shouldnt cost you a fortune. The problem with college today is that it does. Too many people are spending tens of thousands of dollars on degrees that have little value in the modern world.

This is why there is now more than $1.48 trillion (Approx.) in student loan debt worldwide. Too much money is wasted. But it is not just about the money. Time - something you will never get back - is also lost. College forces you to attend for multiple semesters, take classes you dont care about, and waste a few years before graduating.
Yet graduation is only the beginning. Having a degree does not guarantee you will get a job. Most people end up spending a few more years working entry-level positions to add job experience to their resume.
Is there a better way? Absolutely. And it won't cost you tens of thousands of dollars, put you in debt, or make you wait years before seeing tangible results.
</string>
    <string name="canceltext3">Unlimited Access To Practical Career Courses!</string>
    <string name="canceltext4">Choosing a career and improving your life just got easier. Knowledge Society teaches you practical life lessons from recognized experts who have real-world experience and success doing what they show you.
        The worlds changing too fast for colleges to keep up. This is why Knowledge Society members get multiple new courses every month. Some of the things you ll learn about include:
    </string>
    <string name="canceltext5">Start A Social Media Marketing Agency\nMake Money Growing Instagram Followings\nGet Paid Being A Copywriter\nBecome A Personal Trainer\nLearn How To Flip Real Estate Contracts\nHow To Sell T-shirts On Facebook\nHow To Start A Profitable Hair Salon\nHow To Sell Digital Products As An Affiliate\nMake More Money As An Uber Driver\nBook Publishing Secrets\nSet Up An Autobody Shop\nHow To Set Up A Food Truck Business\nHow To Start A Mobile Car Wash Business\nSecrets Of Running A Six-Figure Airbnb Business\nHow To Make Money Teaching Languages Online\nHow To Make Money Being A Gamer\nHow To Create A Money Making App\nHow to Start an Electronics Repair Business\nHow To Set Up An IT Support Business\nAnd many more
</string>
    <string name="canceltext6">Learn From Anywhere, On Your Own Schedule</string>
    <string name="canceltext7">It doesnt matter if you only have 15 minutes spare time on the bus to work. Or an hour before bed. You can log in and learn as long as you are connected to the internet. All your progress through the courses is saved, so you can pick up exactly where you left off.Each course is about an hour long and holds nothing back. You will learn things that you can use immediately after taking the course. Since there are multiple courses to learn from, you can watch as many as you want - as many times as you like - before deciding which you want to implement.What if you are already employed? No problem. You can still earn a certification to showcase your new skills and potentially earn a raise.</string>
    <string name="canceltext8">The Evolution of Education</string>
    <string name="canceltext9">The internet has changed education forever. We communicate and learn at a pace faster than any other time in history. While the rest of the world relies on a traditional education only, you can pursue a self education that gets you ahead.Until now, theres never been a convenient place to learn everything they should have taught you in school.Knowledge Society is that place. Start now and you will gain instant access to an online library of multiple career courses thats constantly updated over time. Click the button below to begin your first course!</string>
    <string name="canceltext10">Still Have Questions?</string>
    <string name="canceltext11">We got your back. Here what people regularly ask - and how we respond.</string>
    <string name="canceltext12">What will Knowledge Society teach me?.</string>
    <string name="canceltext13">Knowledge Society focuses on four main pillars of online education: health, wealth, love, and happiness. At this time, we are focusing on wealth - practical skills that you can use to start or grow your career. Because there is multiple courses, you will learn both beginner and advanced concepts.</string>
    <string name="canceltext14">Is Knowledge Society a replacement for college?.</string>
    <string name="canceltext15">Not at all. It is more like a supplement. Because the lessons require less time and money than a semester of school, you can learn while attending college. We had many high school and college students use our courses to start businesses that makes more than what their parents earn</string>
    <string name="canceltext16">Who is teaching Knowledge Society courses?.</string>
    <string name="canceltext17">You can expect to learn from teachers who have experience in what they talk about. Some of the results our teachers have accomplished include: starting a multimillion dollar t-shirt business, closing 5-, 6- and even 7-figure real estate deals, and investing over 9 figures in paid advertising.</string>
    <string name="devicetext1">Learn from the comfort of your home or on the go, whenever you want - the choice is yours.\n\n
    	Log into your private account\n
    	Watch via any Android Device with internet access.\n
    	Learn on your own schedule\n
    	Start or stop the videos anytime. Pause and pick up where you left off easily.\n
    	Use any computer\n
    	Watch right on lms.sprintzeal.com\n
</string>
    <string name="devicetext2">Log into your private account\nWatch via any device with internet access.</string>
    <string name="devicetext3">Learn on your own schedule\nStart or stop the videos anytime. Pause and pick up where you left off easily.</string>
    <string name="devicetext4">Use any computer\nWatch right on Knowledgesociety.com.</string>
    <string name="pricetext">Get access to specialized video training that teaches practical skills for improving your career and life, every month. Weekly content updates from multiple worlds best industry experts..</string>
    <string name="priceduration">Benefits - </string>
    <string name="pricewatch">Watch on your laptop, TV, phone and tablet</string>
    <string name="priceaccess">Unlimited access</string>
    <string name="pricecancel">Cancel at any time</string>
    <string name="pricevideos">Exclusive videos with tips and tricks from every instructor </string>
    <string name="title_shop">Home</string>
    <string name="title_gifts">Search</string>
    <string name="title_profile">Offers</string>
    <string name="title_more">More</string>
</resources>